fixed coding error for visit-us spacing

--- a/css/main.css
+++ b/css/main.css
@@ -175,7 +175,6 @@ div.action-statement {
 
 #visit-us {
   clear: both;
-  width: 100%;
   margin: 150 auto 33.2px;
 }
 
